--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-01-11  Martin Baulig  <martin@ximian.com>
+
+	* backends/mono-csharp/MonoCSharpLanguageBackend.cs: Incremented
+	MonoSymbolFileTable.DynamicVersion to 20 for the next Mono release.
+
 2003-01-10  Peter Williams  <peterw@ximian.com>
 
 	* lib/Makefile.in (clean): Remove *.dll on make clean as well as *.exe.
