2003-01-11  Martin Baulig  <martin@ximian.com>
	* frontends/scripting/Parser.jay: Added `MODULE ALL module_operations'
	to do the operation on all modules.

svn path=/trunk/debugger/; revision=10377

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-01-11  Martin Baulig  <martin@ximian.com>
 
+	* frontends/scripting/Parser.jay: Added `MODULE ALL module_operations'
+	to do the operation on all modules.
+
+2003-01-11  Martin Baulig  <martin@ximian.com>
+
 	* frontends/scripting/Parser.jay: Added `SHOW MODULES' command and
 	a `MODULE' command to modify modules.
 
