--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2003-01-14  Martin Baulig  <martin@ximian.com>
 
+	* backends/server/i386-linux-ptrace.c: Moved the
+	architecture-specific stuff into i386-arch.[ch]; moved the
+	portable stuff into i386-ptrace.c, created i386-linux-ptrace.c and
+	i386-freebsd-ptrace.c.
+
+2003-01-14  Martin Baulig  <martin@ximian.com>
+
 	* configure.in (server_sources): AC_SUBST this to
 	i386-linux-ptrace.c on Linux and to nothing on other systems.
 
