--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2003-01-17  Martin Baulig  <martin@ximian.com>
+
+	* backends/server/breakpoints.c: Don't use a GStaticRecMutex here; 
+	mono_debugger_breakpoint_manager_new () now takes two delegate
+	arguments - a lock an an unlock function.
+
+	* classes/BreakpointManager.cs: Create a Mutex and pass the
+	unmanaged breakpoint manager to delegates to lock/unlock it.
+
 2003-01-16  Martin Baulig  <martin@ximian.com>
 
 	* backends/server/i386-freebsd-ptrace.c (do_wait): FreeBSD
