--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2003-01-17  Martin Baulig  <martin@ximian.com>
 
+	* configure.in: Don't check for gthread anymore.
+
 	* backends/server/breakpoints.c: Don't use a GStaticRecMutex here; 
 	mono_debugger_breakpoint_manager_new () now takes two delegate
 	arguments - a lock an an unlock function.
