--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2003-01-17  Martin Baulig  <martin@ximian.com>
 
+	* classes/ObjectCache.cs: Catch and silently ignore exceptions
+	when creating the WeakReference.  This makes the debugger work
+	with a runtime which has no GCHandle support.
+
+2003-01-17  Martin Baulig  <martin@ximian.com>
+
 	* configure.in: Don't check for gthread anymore.
 
 	* backends/server/breakpoints.c: Don't use a GStaticRecMutex here; 
