--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-01-17  Martin Baulig  <martin@ximian.com>
 
+	* backends/DaemonThreadRunner.cs: Make the runner thread exit when
+	the target receives a SIGKILL.
+
+2003-01-17  Martin Baulig  <martin@ximian.com>
+
 	* classes/ObjectCache.cs: Catch and silently ignore exceptions
 	when creating the WeakReference.  This makes the debugger work
 	with a runtime which has no GCHandle support.
