--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-01-18  Martin Baulig  <martin@ximian.com>
+
+	* RELEASE-NOTES-0.2.0.txt: Replaced `GNU/Linux' with `Linux and
+	BSD kernels' since the debugger is now working on FreeBSD.
+
 2003-01-17  Martin Baulig  <martin@ximian.com>
 
 	* backends/DaemonThreadRunner.cs: Make the runner thread exit when
