--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2003-01-18  Martin Baulig  <martin@ximian.com>
 
-	* configure.in: Set version number 0.1.9, we're almost ready for
+	* configure.in: Set version number to 0.1.9, we're almost ready for
 	the release ....
 
 2003-01-18  Martin Baulig  <martin@ximian.com>
