--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2003-01-18  Martin Baulig  <martin@ximian.com>
 
+	* interfaces/IProcess.cs (State, Disassembler): New properties.
+
+	* backends/SingleSteppingEngine.cs: Implement IDisassembler.
+
+	* backends/Process.cs: Some API cleanups.
+	(ProcessExitedEvent): New public event.
+
+2003-01-18  Martin Baulig  <martin@ximian.com>
+
 	* configure.in: Set version number to 0.1.9, we're almost ready for
 	the release ....
 
