2003-01-19  Martin Baulig  <martin@ximian.com>
	* README.FreBSD: The mono and binutils binaries are ready :-)

svn path=/trunk/debugger/; revision=10715

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2003-01-19  Martin Baulig  <martin@ximian.com>
 
+	* README.FreBSD: The mono and binutils binaries are ready :-)
+
+2003-01-19  Martin Baulig  <martin@ximian.com>
+
 	* README.FreeBSD: Unfortunately, the binutils issue is a bit worse
 	than expected on FreeBSD.  I've made a FreeBSD port, including a
 	binary package; added a link to them.
