2003-01-19  Martin Baulig  <martin@ximian.com>
	Released version 0.2.0 "Boston" of the Mono Debugger :-)

svn path=/trunk/debugger/; revision=10716

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2003-01-19  Martin Baulig  <martin@ximian.com>
 
+	Released version 0.2.0 "Boston" of the Mono Debugger :-)
+
+2003-01-19  Martin Baulig  <martin@ximian.com>
+
 	* README.FreBSD: The mono and binutils binaries are ready :-)
 
 2003-01-19  Martin Baulig  <martin@ximian.com>
