--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+January 19th, 2003 - Martin Baulig
+----------------------------------
+
+Released version 0.2.0 "Boston" of the Mono Debugger :-)
+
 January 17th, 2003 - Martin Baulig
 ----------------------------------
 
