--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2003-01-22  Martin Baulig  <martin@ximian.com>
+
+	* wrapper/: New directory.  This is an unmanaged wrapper
+	application which embeds the JIT.  It is launched from the
+	debugger when debugging managed applications.
+
+	* configure.in: Set version number to 0.2.1; require Mono 0.19.1.
+
 2003-01-19  Martin Baulig  <martin@ximian.com>
 
 	Released version 0.2.0 "Boston" of the Mono Debugger :-)
