2003-01-22  Martin Baulig  <martin@ximian.com>
	* backends/ThreadManager.cs: Use the new mono thread manager in
	the wrapper.

svn path=/trunk/debugger/; revision=10809

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2003-01-22  Martin Baulig  <martin@ximian.com>
 
+	* backends/ThreadManager.cs: Use the new mono thread manager in
+	the wrapper.
+
 	* wrapper/: New directory.  This is an unmanaged wrapper
 	application which embeds the JIT.  It is launched from the
 	debugger when debugging managed applications.
