--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-23  Nick Drochak <ndrochak@gol.com>
+
+	* frontends/gui/DebuggerGUI.cs: Hook up close button on window border.
+
 2003-01-22  Martin Baulig  <martin@ximian.com>
 
 	* lib/Makefile.am: Use the new wrapper instead of @MONO@.  Added
