2003-01-24  Martin Baulig  <martin@ximian.com>
	* wrapper/: Reflected lastest runtime changes.

svn path=/trunk/debugger/; revision=10879

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2003-01-24  Martin Baulig  <martin@ximian.com>
 
+	* wrapper/: Reflected lastest runtime changes.
+
+2003-01-24  Martin Baulig  <martin@ximian.com>
+
 	Made the serialization stuff actually work.  You can now save a
 	debugger session - including all your breakpoints - to disk and
 	read it back next time you start the debugger :-)
