--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-26  Martin Baulig  <martin@ximian.com>
+
+	* frontends/scripting/Parser.jay: Added `kill' command.	
+
 2003-01-24  Martin Baulig  <martin@ximian.com>
 
 	* wrapper/: Reflected lastest runtime changes.
