--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2003-01-26  Martin Baulig  <martin@ximian.com>
 
+	* frontends/scripting/: Use Mono.GetOptions.
+
+2003-01-26  Martin Baulig  <martin@ximian.com>
+
 	* doc/user-manual.texi: New file.  Explained thread groups and
 	per-thread breakpoints there.
 
