2003-02-01  Martin Baulig  <martin@ximian.com>
	* classes/ObjectCache.cs: Re-enable WeakReferences.

svn path=/trunk/debugger/; revision=11097

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2003-02-01  Martin Baulig  <martin@ximian.com>
 
+	* classes/ObjectCache.cs: Re-enable WeakReferences.
+
+2003-02-01  Martin Baulig  <martin@ximian.com>
+
 	* frontends/command-line/Interpreter.cs: The ScriptingContext is
 	now created by the caller and passed to the .ctor as argument.
 
